ripping-resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ripp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: ripp
  template:
    metadata:
      labels:
        bb: ripp
    spec:
      containers:
        - name: ripp
          image: wordpress
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: ripping-resource-entrypoint
  namespace: default
spec:
  type: NodePort
  selector:
    bb: ripp
  ports:
    - port: 80
