ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ng-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - "rippingresource.com"
    secretName: "rippingresource-tls"
  rules:
    - host: "rippingresource.com"
      http:
        paths:
          - backend:
              service:
                name: ripping-resource-entrypoint
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: thenextchapter.pw
      http:
        paths:
          - backend:
              service:
                name: the-next-chapter-entrypoint
                port:
                  number: 80
            path: /
            pathType: Prefix
